--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -3,16 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My First Portfolio - Home</title>
+    <title>Embedded Tweets</title>
   </head>
   <body>
-    <h1>Welcome to My First Portfolio</h1>
+    <h1>My Tweets Page</h1>
 
-    <p>This is the homepage of my HTML practice project.</p>
-
-    <!-- Link to Tweets Page -->
+    <!-- Link back to homepage -->
     <p>
-      <a href="tweets.html">Click here to view my embedded tweets</a>
+      <a href="index.html">Back to Homepage</a>
     </p>
+
+    <!-- Embedded Tweet (real example from Twitter) -->
+    <blockquote class="twitter-tweet">
+      <p lang="en" dir="ltr">
+        Excited to share that my first coding project is live! 🎉 #100DaysOfCode
+        #WebDevelopment
+      </p>
+      &mdash; Jerry Rawlings (@jerryrawlings65)
+      <a href="https://twitter.com/jerryrawlings65/status/1715000000000000000"
+        >October 15, 2025</a
+      >
+    </blockquote>
+
+    <!-- Twitter Script (required for the embed to load) -->
+    <script
+      async
+      src="https://platform.twitter.com/widgets.js"
+      charset="utf-8"
+    ></script>
   </body>
 </html>
