--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,65 +6,46 @@
     <title>My First Portfolio</title>
   </head>
   <body>
-    <!-- Header with navigation -->
     <header>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="tweets.html">Tweets</a></li>
       </ul>
     </header>
-
-    <!-- Main content -->
     <main>
-      <!-- Article: main content of the page -->
       <article>
         <h1>Welcome to My First Portfolio</h1>
-
         <p>
           This is the first paragraph, introducing the content of this simple
           web page created as part of my HTML practice.
         </p>
-
         <h2>About This Page</h2>
-
         <p>
           This second paragraph explains that the page contains headings,
           paragraphs, and a clickable image to satisfy the project requirements.
         </p>
-
         <h3>Additional Details</h3>
-
         <p>
           This third paragraph includes further details about the structure and
           purpose of this HTML document.
         </p>
-
         <p>
           This fourth paragraph provides a smooth conclusion and can direct
           users to other pages or information.
         </p>
-
         <p>
           <a
             href="https://example.com"
             target="_blank"
             rel="noopener noreferrer"
-          >
-            <img
-              src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
-              alt="ALX Logo"
-            />
-          </a>
+            ><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo"
+          /></a>
         </p>
       </article>
-
-      <!-- Aside: placeholder -->
       <aside>
         <p>placeholder to add comment thread later</p>
       </aside>
     </main>
-
-    <!-- Footer -->
     <footer>
       <p>
         Made by Jerry Rawlings -
