--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -47,10 +47,7 @@
       </aside>
     </main>
     <footer>
-      <p>
-        Made by Jerry Rawlings -
-        <a href="https://example.com" target="_blank">here</a>
-      </p>
+      <p> Made by Jerry Rawlings -<a href="https://example.com"="_blank">here<a><p>
     </footer>
   </body>
 </html>
