--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -33,10 +33,7 @@
       </aside>
     </main>
     <footer>
-      <p>
-        Made by Jerry Rawlings -
-        <a href="https://example.com" target="_blank">here</a>
-      </p>
+      <p>   Made by Jerry Rawlings -<a href="https://example.com" target="_blank">here</a></p>
     </footer>
     <script
       async
