--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -31,9 +31,8 @@
       <aside>
         <p>placeholder to add comment thread later</p>
       </aside>
-    </main>
-    <footer>
-      <p>   Made by Jerry Rawlings -<a href="https://example.com" target="_blank">here</a></p>
+    </main><footer>
+      <p>Made by Jerry Rawlings - <a href="https://example.com" target="_blank">here</a></p>
     </footer>
     <script
       async
